// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#report() should return correctly 1`] = `
"
Evaluated

  expression

to be

  \\"actual-value\\"
"
`;

exports[`#report() should return correctly with description 1`] = `
"
description

Evaluated

  expression

to be

  \\"actual-value\\"
"
`;
